..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.3rc2

Bug fixes:
..F....... [ZBX-5627] fixed missed placeholder brackets in multiple pages (Eduard, Pavels)
..F....... [ZBX-5578] fixed multiple IE issues in screens (Eduard)
..F....... [ZBX-5612] fixed inability to view item data overview when host group doesn't have any triggers (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)
........S. [ZBX-5318] added remote commands in expanded {ESC.HISTORY} macro (Sasha)
A.F....... [ZBX-1357] added Chinese (Taiwan) translation; thanks to Zabbix translators (Richlv)
A.F....... [ZBX-1357] updated Chinese (China), Brazilian Portuguese, French, German, Japanese, Latvian, Polish, Spanish, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes: